Calendar and Minor changes to Contact form

--- a/IPOHTML/index.html
+++ b/IPOHTML/index.html
@@ -17,10 +17,14 @@
 
 	<!-- Custom styles for this template -->
 	<link href="css/blog-home.css" rel="stylesheet">
-<script defer src="https://use.fontawesome.com/releases/v5.0.8/js/solid.js" integrity="sha384-+Ga2s7YBbhOD6nie0DzrZpJes+b2K1xkpKxTFFcx59QmVPaSA8c7pycsNaFwUK6l" crossorigin="anonymous"></script>
-	<script defer src="https://use.fontawesome.com/releases/v5.0.8/js/regular.js" integrity="sha384-t7yHmUlwFrLxHXNLstawVRBMeSLcXTbQ5hsd0ifzwGtN7ZF7RZ8ppM7Ldinuoiif" crossorigin="anonymous"></script>
-	<script defer src="https://use.fontawesome.com/releases/v5.0.8/js/brands.js" integrity="sha384-sCI3dTBIJuqT6AwL++zH7qL8ZdKaHpxU43dDt9SyOzimtQ9eyRhkG3B7KMl6AO19" crossorigin="anonymous"></script>
-	<script defer src="https://use.fontawesome.com/releases/v5.0.8/js/fontawesome.js" integrity="sha384-7ox8Q2yzO/uWircfojVuCQOZl+ZZBg2D2J5nkpLqzH1HY0C1dHlTKIbpRz/LG23c" crossorigin="anonymous"></script>
+	<script defer src="https://use.fontawesome.com/releases/v5.0.8/js/solid.js" integrity="sha384-+Ga2s7YBbhOD6nie0DzrZpJes+b2K1xkpKxTFFcx59QmVPaSA8c7pycsNaFwUK6l"
+	    crossorigin="anonymous"></script>
+	<script defer src="https://use.fontawesome.com/releases/v5.0.8/js/regular.js" integrity="sha384-t7yHmUlwFrLxHXNLstawVRBMeSLcXTbQ5hsd0ifzwGtN7ZF7RZ8ppM7Ldinuoiif"
+	    crossorigin="anonymous"></script>
+	<script defer src="https://use.fontawesome.com/releases/v5.0.8/js/brands.js" integrity="sha384-sCI3dTBIJuqT6AwL++zH7qL8ZdKaHpxU43dDt9SyOzimtQ9eyRhkG3B7KMl6AO19"
+	    crossorigin="anonymous"></script>
+	<script defer src="https://use.fontawesome.com/releases/v5.0.8/js/fontawesome.js" integrity="sha384-7ox8Q2yzO/uWircfojVuCQOZl+ZZBg2D2J5nkpLqzH1HY0C1dHlTKIbpRz/LG23c"
+	    crossorigin="anonymous"></script>
 
 </head>
 
@@ -29,62 +33,67 @@
 	<nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
 		<div class="container">
 			<a class="navbar-brand" href="index.html">
-				<i class="fas fa-arrow-circle-left fa-2x" ></i>
+				<i class="fas fa-arrow-circle-left fa-2x"></i>
 			</a>
-			<img src="img/history.png" border="5" width="100" height="50"> 
-			<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
+			<img src="img/history.png" border="5" width="100" height="50">
+			<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive"
+			    aria-expanded="false" aria-label="Toggle navigation">
 				<span class="navbar-toggler-icon"></span>
 			</button>
 			<div class="collapse navbar-collapse" id="navbarResponsive">
 				<ul class="navbar-nav ml-auto">
 					<li class="nav-item">
-							<li class="dropdown">
-								<a href="#" class="nav-link" data-toggle="dropdown"><i id="icon" class="fas fa-address-card"></i>Usuario</a>
-								
-								<ul class="dropdown-menu">
-									<li>
-										<div class="navbar-content">
+						<li class="dropdown">
+							<a href="#" class="nav-link" data-toggle="dropdown">
+								<i id="icon" class="fas fa-address-card"></i>Usuario</a>
+
+							<ul class="dropdown-menu">
+								<li>
+									<div class="navbar-content">
+										<div class="row">
+											<div class="col-md-5">
+												<img src="http://placehold.it/120x120" alt="Alternate Text" class="img-responsive" />
+												<p class="text-center small">
+													<a href="#">Change Photo</a>
+												</p>
+											</div>
+											<div class="col-md-7">
+												<span>Bhaumik Patel</span>
+												<p class="text-muted small">
+													mail@gmail.com</p>
+												<div class="divider">
+												</div>
+												<a href="#" class="btn btn-primary btn-sm active">View Profile</a>
+											</div>
+										</div>
+									</div>
+									<div class="navbar-footer">
+										<div class="navbar-footer-content">
 											<div class="row">
-												<div class="col-md-5">
-													<img src="http://placehold.it/120x120" alt="Alternate Text" class="img-responsive" />
-													<p class="text-center small">
-														<a href="#">Change Photo</a>
-													</p>
+												<div class="col-md-6">
+													<a href="#" class="btn btn-default btn-sm">Change Passowrd</a>
 												</div>
-												<div class="col-md-7">
-													<span>Bhaumik Patel</span>
-													<p class="text-muted small">
-														mail@gmail.com</p>
-													<div class="divider">
-													</div>
-													<a href="#" class="btn btn-primary btn-sm active">View Profile</a>
+												<div class="col-md-6">
+													<a href="http://www.jquery2dotnet.com" class="btn btn-default btn-sm pull-right">Sign Out</a>
 												</div>
 											</div>
 										</div>
-										<div class="navbar-footer">
-											<div class="navbar-footer-content">
-												<div class="row">
-													<div class="col-md-6">
-														<a href="#" class="btn btn-default btn-sm">Change Passowrd</a>
-													</div>
-													<div class="col-md-6">
-														<a href="http://www.jquery2dotnet.com" class="btn btn-default btn-sm pull-right">Sign Out</a>
-													</div>
-												</div>
-											</div>
-										</div>
-									</li>
-								</ul>
-							</li>
-					<li class="nav-item">
-						<a href="index.html" class="nav-link"><i id="icon" class="fas fa-home"></i> Inicio</a>
-					</li>
-					<li class="nav-item">
-						<a class="nav-link" href="juegos.html"><i id="icon"class="fas fa-gamepad"></i>Juegos</a>
-					</li>
-					<li class="nav-item">
-						<a class="nav-link" href="contacto.html"><i id="icon" class="fas fa-envelope"></i>Contacto</a>
-					</li>
+									</div>
+								</li>
+							</ul>
+						</li>
+						<li class="nav-item">
+							<a href="index.html" class="nav-link">
+								<i id="icon" class="fas fa-home"></i> Inicio</a>
+						</li>
+						<li class="nav-item">
+							<a class="nav-link" href="juegos.html">
+								<i id="icon" class="fas fa-gamepad"></i>Juegos</a>
+						</li>
+						<li class="nav-item">
+							<a class="nav-link" href="contacto.html">
+								<i id="icon" class="fas fa-envelope"></i>Contacto</a>
+						</li>
 				</ul>
 			</div>
 		</div>
@@ -99,7 +108,7 @@
 			<!-- Blog Entries Column -->
 			<div class="col-md-8">
 
-				<h1 class="my-4" style="font-family: 'Lobster', serif;" align="center" font-size: 2em; >Historia
+				<h1 class="my-4" style="font-family: 'Lobster', serif;" align="center" font-size: 2em;>Historia
 					<small>1º Primaria A</small>
 				</h1>
 
@@ -110,9 +119,10 @@
 					<img class="card-img-top" src="img/etapas.png" alt="Card image cap">
 					<div class="card-body">
 						<h2 class="card-title">Historia y la cronologia</h2>
-						<p class="card-text">En esta unidad aprenderemos la nocion del tiempo historico y sus variables: cronologia ,sucesion y simultaneidad,cambioycontinuidad,duracion,ritmo,intensidad y periodizacion </p>
+						<p class="card-text">En esta unidad aprenderemos la nocion del tiempo historico y sus variables: cronologia ,sucesion y simultaneidad,cambioycontinuidad,duracion,ritmo,intensidad
+							y periodizacion </p>
 						<a href="Post1.html" class="btn btn-primary">Leer tema 1 &rarr;</a>
-                        <a href="test1.html" class="btn btn-primary">Hacer test tema 1  &rarr;</a>
+						<a href="test1.html" class="btn btn-primary">Hacer test tema 1 &rarr;</a>
 					</div>
 					<div class="card-footer text-muted">
 						Posted on January 1, 2018 by
@@ -125,9 +135,10 @@
 					<img class="card-img-top" src="img/edad-media.png" alt="Card image cap">
 					<div class="card-body">
 						<h2 class="card-title">La Edad Media</h2>
-						<p class="card-text">En este tema estudiaremos los fundamentos de la Edad Media: su historia, las estapas , caracteristicas principales y la estructura social del sistema feudal</p>
+						<p class="card-text">En este tema estudiaremos los fundamentos de la Edad Media: su historia, las estapas , caracteristicas principales
+							y la estructura social del sistema feudal</p>
 						<a href="Post2.html" class="btn btn-primary">Leer tema 2 &rarr;</a>
-                        <a href="test2.html" class="btn btn-primary">Hacer test tema2 &rarr;</a>
+						<a href="test2.html" class="btn btn-primary">Hacer test tema2 &rarr;</a>
 					</div>
 					<div class="card-footer text-muted">
 						Posted on January 5, 2018 by
@@ -183,23 +194,23 @@
 											<a id="d" href="#Tema1">TEMA 1</a>
 										</li>
 										<li>
-											<a id="d"href="#Tema2">TEMA 2</a>
+											<a id="d" href="#Tema2">TEMA 2</a>
 										</li>
 										<li>
-											<a id="d"href="#">TEMA 3</a>
+											<a id="d" href="#">TEMA 3</a>
 										</li>
 									</ul>
 								</div>
 								<div class="col-lg-6">
 									<ul class="list-unstyled mb-0">
 										<li>
-											<a id="d"href="#">TEMA 4</a>
+											<a id="d" href="#">TEMA 4</a>
 										</li>
 										<li>
-											<a id="d"href="#">TEMA 5</a>
+											<a id="d" href="#">TEMA 5</a>
 										</li>
 										<li>
-											<a id="d"href="#">TEMA 6</a>
+											<a id="d" href="#">TEMA 6</a>
 										</li>
 									</ul>
 								</div>
@@ -238,10 +249,18 @@
 					</script>
 				</div>
 
+				<div class="card my-4">
+					<h5 class="card-header">Calendario</h5>
+					<iframe src="https://calendar.google.com/calendar/embed?showTitle=0&amp;showNav=0&amp;showDate=0&amp;showPrint=0&amp;showCalendars=0&amp;showTz=0&amp;mode=AGENDA&amp;height=400&amp;wkst=1&amp;bgcolor=%23FFFFFF&amp;src=pa348n0qkm3jjinmu461pmlq68%40group.calendar.google.com&amp;color=%232952A3&amp;ctz=Europe%2FBrussels"
+					    style="border-width:0" width="350" height="400" frameborder="0" scrolling="no"></iframe>
+				</div>
+
 			</div>
 
 		</div>
-		<!-- /.row -->
+
+	</div>
+	<!-- /.row -->
 
 	</div>
 	<!-- /.container -->
@@ -261,4 +280,3 @@
 </body>
 
 </html>
-
