--- a/IPOHTML/contacto.html
+++ b/IPOHTML/contacto.html
@@ -7,20 +7,22 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<!--===============================================================================================-->
 	
+	<link href="https://fonts.googleapis.com/css?family=Lobster" rel="stylesheet">
+
 	<link rel="stylesheet" type="text/css" href="css/contacto.css">
 
 </head>
 
 <body>
 
-	<div class="contact1">
+	<div class="contact1" border="">
 		<div class="container-contact1">
 			<div class="contact1-pic js-tilt" data-tilt>
 				<img src="img/images/img-01.png" alt="IMG">
 			</div>
 
 			<form class="contact1-form validate-form">
-				<span class="contact1-form-title">
+				<span class="contact1-form-title" style="font-family: 'Lobster', serif;" align="center">
 					Contacta con nosotros
 				</span>
 
