--- a/IPOHTML/inicio.html
+++ b/IPOHTML/inicio.html
@@ -19,20 +19,17 @@
 
 <body id="page-top">
     <header class="masthead text-center text-white d-flex">
-        <div class="container my-auto">
-            <div class="row">
-                <div class="col-lg-10 mx-auto">
-                    <h1 class="text-uppercase">
-                        
-                        <img src="img/history.png" alt="Logo">
-                    </h1>
-                </div>
-                <div class="col-lg-8 mx-auto">
-                    <p class="text-faded mb-5">El sitio perfecto para estudiar</p>
-                    <a class="btn btn-primary btn-xl js-scroll-trigger" href="login.html">Entra Ahora</a>
-                    <a class="btn btn-primary btn-xl js-scroll-trigger" href="register.html">Registrate</a>
-                </div>
+        <div class="col-lg-8 mx-auto">
+            <h1 >
+                <img src="img/history.png" alt="Logo">
+            </h1>
+            <div>
+                <video width="620" height="400" controls autoplay>
+                    <source src="video/Intro.mp4" type="video/mp4">
+                    <source src="video/Intro.ogg" type="video/ogg">
+                </video>
             </div>
-        </div>
+            <a class="btn btn-primary btn-xl js-scroll-trigger" href="login.html">Entra Ahora</a>
+            <a class="btn btn-primary btn-xl js-scroll-trigger" href="register.html">Registrate</a>
     </header>
 </body>
