--- a/IPOHTML/test1.html
+++ b/IPOHTML/test1.html
@@ -11,7 +11,7 @@
 	<title>Blog Post - Start Bootstrap Template</title>
 
 	<!-- Bootstrap core CSS -->
-	<link href="vendor/bootstrap/css/bootstrap.min1.css" rel="stylesheet">
+	<link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
 
 
 	<!-- Custom styles for this template -->
