--- a/IPOHTML/contacto.html
+++ b/IPOHTML/contacto.html
@@ -18,7 +18,7 @@
 	<div class="contact1" border="">
 		<div class="container-contact1">
 			<div class="contact1-pic js-tilt" data-tilt>
-				<img src="img/images/img-01.png" alt="IMG">
+				<img src="img/images/img-01.png" alt="IMG Contacto">
 			</div>
 
 			<form class="contact1-form validate-form">
@@ -48,13 +48,13 @@
 
 				<div class="container-contact1-form-btn">
 					<button class="contact1-form-btn">
-						<a href="index.html" id="btnEnviar" style="text-decoration:none;">
+						<a href="index.html" id="btnEnviar" style="text-decoration:none;" alt="Enviar">
 							Enviar
 						</a>
 					</button>
 
 					<button class="contact1-form-btn">
-						<a href="index.html" id="btnEnviar" style="text-decoration:none;">
+						<a href="index.html" id="btnEnviar" style="text-decoration:none;" alt="Incio">
 							Inicio
 						</a>
 					</button>
