--- a/IPOHTML/index.html
+++ b/IPOHTML/index.html
@@ -35,8 +35,8 @@
 			<a class="navbar-brand" href="index.html">
 				<i class="fas fa-arrow-circle-left fa-2x"></i>
 			</a>
-			<img src="img/history.png" border="5" width="100" height="50">
-			<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive"
+			<img src="img/history.png" alt="Logo History" border="5" width="100" height="50">
+			<button alt="navbar" sclass="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive"
 			    aria-expanded="false" aria-label="Toggle navigation">
 				<span class="navbar-toggler-icon"></span>
 			</button>
@@ -83,15 +83,15 @@
 							</ul>
 						</li>
 						<li class="nav-item">
-							<a href="index.html" class="nav-link">
+							<a href="index.html" class="nav-link" alt="Inicio">
 								<i id="icon" class="fas fa-home"></i> Inicio</a>
 						</li>
 						<li class="nav-item">
-							<a class="nav-link" href="juegos.html">
+							<a class="nav-link" href="juegos.html" alt="Juegos">
 								<i id="icon" class="fas fa-gamepad"></i>Juegos</a>
 						</li>
 						<li class="nav-item">
-							<a class="nav-link" href="contacto.html">
+							<a class="nav-link" href="contacto.html" alt="Contacto">
 								<i id="icon" class="fas fa-envelope"></i>Contacto</a>
 						</li>
 				</ul>
@@ -121,8 +121,8 @@
 						<h2 class="card-title">Historia y la cronologia</h2>
 						<p class="card-text">En esta unidad aprenderemos la nocion del tiempo historico y sus variables: cronologia ,sucesion y simultaneidad,cambioycontinuidad,duracion,ritmo,intensidad
 							y periodizacion </p>
-						<a href="Post1.html" class="btn btn-primary">Leer tema 1 &rarr;</a>
-						<a href="test1.html" class="btn btn-primary">Hacer test tema 1 &rarr;</a>
+						<a href="Post1.html" class="btn btn-primary" alt="Tema 1">Leer tema 1 &rarr;</a>
+						<a href="test1.html" class="btn btn-primary" alt="Test 1">Hacer test tema 1 &rarr;</a>
 					</div>
 					<div class="card-footer text-muted">
 						Posted on January 1, 2018 by
@@ -137,8 +137,8 @@
 						<h2 class="card-title">La Edad Media</h2>
 						<p class="card-text">En este tema estudiaremos los fundamentos de la Edad Media: su historia, las estapas , caracteristicas principales
 							y la estructura social del sistema feudal</p>
-						<a href="Post2.html" class="btn btn-primary">Leer tema 2 &rarr;</a>
-						<a href="test2.html" class="btn btn-primary">Hacer test tema2 &rarr;</a>
+						<a href="Post2.html" class="btn btn-primary" alt="Tema 2">Leer tema 2 &rarr;</a>
+						<a href="test2.html" class="btn btn-primary" alt="Test 2">Hacer test tema2 &rarr;</a>
 					</div>
 					<div class="card-footer text-muted">
 						Posted on January 5, 2018 by
@@ -163,7 +163,7 @@
 
 				<!-- Search Widget -->
 				<div class="card my-4">
-					<h5 class="card-header">Buscar</h5>
+					<h5 class="card-header" alt="Buscar">Buscar</h5>
 					<div class="card-body">
 						<div class="input-group">
 							<FORM method=GET action="http://www.google.es/search">
