--- a/IPOHTML/inicio.html
+++ b/IPOHTML/inicio.html
@@ -25,11 +25,11 @@
             </h1>
             <div>
                 <video width="620" height="400" controls autoplay>
-                    <source src="video/Intro.mp4" type="video/mp4">
-                    <source src="video/Intro.ogg" type="video/ogg">
+                    <source src="video/Intro.mp4" type="video/mp4" alt="Video introduccion a la app">
+                    <source src="video/Intro.ogg" type="video/ogg" alt="Video introduccion a la app">
                 </video>
             </div>
-            <a class="btn btn-primary btn-xl js-scroll-trigger" href="login.html">Entra Ahora</a>
-            <a class="btn btn-primary btn-xl js-scroll-trigger" href="register.html">Registrate</a>
+            <a class="btn btn-primary btn-xl js-scroll-trigger" href="login.html" alt="Entrada al Login">Entra Ahora</a>
+            <a class="btn btn-primary btn-xl js-scroll-trigger" href="register.html" alt="Entrada al Registero">Registrate</a>
     </header>
 </body>
