--- a/IPOHTML/register.html
+++ b/IPOHTML/register.html
@@ -47,28 +47,26 @@
                             </div>
                             </form>
                             <div style="float: left; width: 48%">
-                                <button type="submit" class="btn btn-primary btn-block" id="crearCuenta"> Crear Cuenta </button>
-                                <script type="text/javascript">
-                                    document.getElementById("crearCuenta").onclick = function () {
-                                        location.href = "index.html";
-                                    };
-                                </script>
+                                <a href="index.html" class="btn btn-primary btn-block" id="crearCuenta" alt="Crear cuenta">Crear Cuenta</a>
                             </div>
                             <div style="float: right; width: 48%">
-                                <button type="reset" class="btn btn-primary btn-block"> Cancelar </button>
+                                    <a href="register.html" class="btn btn-primary btn-block" id="crearCuenta" alt="Cancelar">Cancelar</a>
                             </div>
                         </div>
                         <p class="text-center">
                             ¿ Ya tienes cuenta ?
-                            <a href="login.html">Inicia sesión</a>
+                            <a href="login.html" alt="Volver al Login">Inicia sesión</a>
                         </p>
                         <p class="text-center">
-                            <button type="submit" class="btn btn-primary" id="goBackbtn">Volver</button>
+                            <a href="inicio.html" class="btn btn-primary" alt="Volver al inicio">Volver</a>
+                            <!--
+                            <button type="submit" class="btn btn-primary" id="goBackbtn" alt="Volver atrás">Volver</button>
                             <script type="text/javascript">
                                 document.getElementById("goBackbtn").onclick = function () {
                                     location.href = "inicio.html";
                                 };
                             </script>
+                        -->
                         </p>
                     </div>
                 </div>
