--- a/IPOHTML/juegos.html
+++ b/IPOHTML/juegos.html
@@ -30,7 +30,7 @@
 <body>
         <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
                 <div class="container">
-                    <a class="navbar-brand" href="index.html">
+                    <a class="navbar-brand" href="index.html" alt="Home page">
                         <i class="fas fa-arrow-circle-left fa-2x" ></i>
                     </a>
                     <img src="img/history.png" border="5" width="100" height="50"> 
@@ -79,13 +79,13 @@
                                         </ul>
                                     </li>
                             <li class="nav-item">
-                                <a href="index.html" class="nav-link"><i id="icon" class="fas fa-home"></i> Inicio</a>
+                                <a href="index.html" class="nav-link"><i id="icon" class="fas fa-home" alt="Inicio"></i> Inicio</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link" href="juegos.html"><i id="icon"class="fas fa-gamepad"></i>Juegos</a>
+                                <a class="nav-link" href="juegos.html"><i id="icon"class="fas fa-gamepad" alt="Juegos"></i>Juegos</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link" href="contacto.html"><i id="icon" class="fas fa-envelope"></i>Contacto</a>
+                                <a class="nav-link" href="contacto.html"><i id="icon" class="fas fa-envelope" alt="Contacto"></i>Contacto</a>
                             </li>
                         </ul>
                     </div>
